[gd_scene load_steps=2 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]

[node name="device_check" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="info_label" type="Label" parent="panel"]
margin_top = 39.3333
margin_right = 637.0
margin_bottom = 99.3333
text = "This is a DeviceCheck Example project by Swift Root Inc.

Note: Device Check only works on iOS 10+ devices."
align = 1
valign = 1

[node name="supported_label" type="Label" parent="panel"]
margin_left = 282.667
margin_top = 161.0
margin_right = 559.667
margin_bottom = 210.0
text = "Supported?: N/A"
valign = 1

[node name="supported_btn" type="Button" parent="panel"]
margin_left = 100.0
margin_top = 161.333
margin_right = 269.0
margin_bottom = 213.333
text = "Check Support"

[connection signal="pressed" from="panel/supported_btn" to="." method="_cb_supported_btn"]
